# SAXShell

./: .codespellignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHORS.rst  CODE-OF-CONDUCT.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  cookiecutter.json  crash_log.txt  environment.yml  mkdocs.yml  pyproject.toml
.codespell/: ignore_words.txt
.github/workflows/: build-and-publish-docs-on-dispatch.yml  build-wheel-release-upload.yml  check-news-item.yml  ci.yml  docs.yml  matrix-and-codecov.yml  pre-commit.yml  tests-on-pr.yml
docs/: Makefile  hooks.py  index.md
docs/api/: overview.md
docs/development/: contributing.md  repo-structure.md  saxs-contrast-mode.md
docs/getting-started/: installation.md  project-setup.md  quickstart.md
docs/javascripts/: mathjax.js
docs/planned_updates/: bornapprox.txt
docs/source/: conf.py  getting-started.rst  index.rst  license.rst
docs/source/api/: saxshell.example_package.rst  saxshell.rst
docs/tutorials/: example-workflow.md  md-to-saxs-pipeline.md
docs/user-guide/: blender-structure-renderer.md  bond-analysis.md  cluster-dynamics-ml.md  cluster-dynamics.md  cluster-extraction.md  debye-waller-analysis.md  electron-density-mapping.md  fft-born-approximation.md  fullrmc-packmol-docker.md  gui-overview.md  lmfit-workflow.md  pdf-calculation.md  preloaded-saxs-models.md  project-configuration.md  pydream-workflow.md  representative-structure-cli.md  results-and-export.md  saxs-contrast-mode.md  saxs-prefit.md  template-system.md  xray-toolkit.md  xyz2pdb-conversion.md
requirements/: conda.txt  docs.txt  pip.txt  saxshell-py312-win.yml  saxshell-py312.yml  tests.txt
scripts/: blender_orientation_probe.py
src/: saxshell.txt
src/saxshell/: bondanalysis.py  clusters.py  functions.py  mdtrajectory.py  pdfsetup.py  saxshell.py  saxshell_app.py  version.py  xyz2pdb.py
src/saxshell/apps/: __init__.py  cluster_stats.py  extract_clusters.py
src/saxshell/bondanalysis/: __init__.py  bondanalyzer.py  cli.py  displacementanalysis.py  distributionanalysisui.py  distributionclusterer.py  presets.py  results.py  structuredescriptor.py  workflow.py
src/saxshell/cluster/: __init__.py  cli.py  clusternetwork.py  pdb_shell_reference.py  presets.py  run_config.py  workflow.py  xyz_cluster_extractor.py
src/saxshell/clusterdynamics/: __init__.py  cli.py  dataset.py  report.py  run_config.py  workflow.py
src/saxshell/clusterdynamicsml/: __init__.py  cli.py  dataset.py  run_config.py  workflow.py
src/saxshell/fullrmc/: __init__.py  cli.py  constraint_generation.py  packmol_docker.py  packmol_planning.py  packmol_setup.py  project_loader.py  project_model.py  representatives.py  solution_properties.py  solution_property_presets.py  solvent_handling.py  (+1 more)
tests/: generate_edm_contiguous_mode_report.py  test_apps.py  test_aps_detector_stitch.py  test_blender_custom_aesthetics.py  test_blender_reference_atoms.py  test_blenderxyz.py  test_bondanalysis_batch_queue.py  test_bondanalysis_cli.py  test_bondanalysis_ui.py  test_cluster_cli.py  test_cluster_ui.py  test_clusterdynamics.py  test_clusterdynamicsml.py  test_contrast_fft_backend.py  test_debye_waller_analysis.py  test_electron_density_mapping.py  test_fullrmc_cli.py  test_functions.py  test_import.py  test_mdtrajectory_cli.py  test_mdtrajectory_cluster.py  test_mdtrajectory_manager.py  test_mdtrajectory_ui.py  test_pdfsetup.py  test_periodic_table_ui.py  test_representativefinder.py  test_saxs_branding.py  test_saxs_cli.py  test_saxs_contrast.py  test_saxs_debye_profiles.py  test_saxs_dream_runtime.py  test_saxs_lazy_imports.py  test_saxs_model_report.py  test_saxs_prefit.py  test_saxs_prior_plot.py  test_saxs_stoichiometry.py  test_saxs_template_installation.py  test_saxs_ui.py  test_skeleton.py  test_structure_distributions.py  (+7 more)
tests/representativefinder_performance/: benchmark_representativefinder.py  test_parallel_representativefinder.py
tests/template_candidates/: fail_missing_dream_callable_model.py  fail_missing_header_model.py  fail_nonfinite_likelihood_model.py  valid_installable_model.py
(+244 files in other folders)
