[build-system]
requires = [
  "setuptools>=80",
  "setuptools-scm[toml]>=8",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "saxshell"
dynamic = ["version"]
description = "Cluster-based solvation shell extraction and SAXS modeling from MD"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Keith White" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "xarray",
  "pyyaml",
  "networkx",
  "lmfit",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.15",
  "mypy>=1.15",
  "pre-commit>=4",
]
dream = [
  "pydream",
]

[project.scripts]
saxshell-extract-clusters = "saxshell.apps.extract_clusters:main"
saxshell-cluster-stats = "saxshell.apps.cluster_stats:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/saxshell/_version.py"

[tool.ruff]
line-length = 78
target-version = "py311"
force-exclude = true
extend-exclude = [
  "src/saxshell/_version.py",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
  "src/saxshell/_version.py",
]
