[build-system]
requires = ["setuptools>=62.0", "setuptools-git-versioning>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saxshell"
dynamic = ["version", "dependencies"]
authors = [
  { name = "Keith White", email = "keith.white@colorado.edu" },
]
maintainers = [
  { name = "Keith White", email = "keith.white@colorado.edu" },
]
description = "Python package for analysis of small-angle scattering data from molecular dynamics derived liquid structures."
keywords = ["scattering", "SAXS", "X-ray", "diffraction", "solvation"]
readme = "README.rst"
requires-python = ">=3.11, <3.15"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://github.com/kewh5868/SAXShell/"
Issues = "https://github.com/kewh5868/SAXShell/issues/"

[project.scripts]
bondanalysis = "saxshell.bondanalysis.cli:main"
clusters = "saxshell.cluster.cli:main"
mdtrajectory = "saxshell.mdtrajectory.cli:main"
saxshell = "saxshell.saxshell:main"
pdfsetup = "saxshell.pdfsetup:main"
xyz2pdb = "saxshell.xyz2pdb.cli:main"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []
namespaces = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/pip.txt"] }

[tool.setuptools.package-data]
"saxshell.xyz2pdb" = ["reference_library/*.pdb", "reference_library/*.txt"]
"saxshell.fullrmc" = ["_solution_property_presets/*.json"]

[tool.codespell]
exclude-file = ".codespell/ignore_lines.txt"
ignore-words = ".codespell/ignore_words.txt"
skip = "*.cif,*.dat"

[tool.docformatter]
recursive = true
wrap-summaries = 72
wrap-descriptions = 72

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.rst
  | \.txt
  | _build
  | buck-out
  | build
  | dist
  | blib2to3
  | tests/data
)/
'''
